--- a/2303A52280_week2_Assignment2.ipynb
+++ b/2303A52280_week2_Assignment2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOFHtWDvhSI+/j/+yjwhbzH",
+      "authorship_tag": "ABX9TyNehth0h2JNS+oUUBGhLWtb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,15 +34,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XBfK_Esx6zBu",
-        "outputId": "884b6e6d-62a5-4150-d33c-d649a6f2b607"
+        "outputId": "0d856f61-556f-46f6-b32a-bc3041474206"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: scipy in /usr/local/lib/python3.10/dist-packages (1.13.1)\n",
-            "Requirement already satisfied: numpy<2.3,>=1.22.4 in /usr/local/lib/python3.10/dist-packages (from scipy) (1.26.4)\n"
+            "Requirement already satisfied: scipy in /usr/local/lib/python3.11/dist-packages (1.13.1)\n",
+            "Requirement already satisfied: numpy<2.3,>=1.22.4 in /usr/local/lib/python3.11/dist-packages (from scipy) (1.26.4)\n"
           ]
         }
       ],
@@ -88,9 +88,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IdiHXP1V63ly",
-        "outputId": "5b9540aa-6137-4fd7-ef07-0a02d233966e"
+        "outputId": "a60ea0ff-8a6f-41d7-a73e-a85535a7fb95"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -134,16 +134,17 @@
         "    print(f\"Optimal Planting: Wheat = {x1:.2f} hectares, Barley = {x2:.2f} hectares\")\n",
         "    print(f\"Maximum Profit: Rs {max_profit:.2f}\")\n",
         "else:\n",
-        "    print(\"Optimization failed. Reason:\", result.message)\n"
+        "    print(\"Optimization failed. Reason:\", result.message)\n",
+        "\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "vheocx_b7N-7",
-        "outputId": "09a2cd46-c832-4ca5-fb5f-119b97206042"
+        "outputId": "7bd3ca30-4465-4175-a5b9-706484373a4e"
       },
-      "execution_count": 7,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
