--- a/2303A52280_WEEK_3_ASSIGNMENT_3.ipynb
+++ b/2303A52280_WEEK_3_ASSIGNMENT_3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNMKv3DZrmj/kHX0nQKvNKc",
+      "authorship_tag": "ABX9TyNH9wKgYF+UX4PaJcitkTzd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 1. Finding x at which f(x) = 5x^4 + 3x^2 + 10 has a minimum value using Gradient Descent.\n",
+        "\n",
         "def gradient_descent_f():\n",
         "    def f(x):\n",
         "        return 5 * x ** 4 + 3 * x ** 2 + 10\n",
@@ -37,7 +37,7 @@
         "    def f_derivative(x):\n",
         "        return 20 * x ** 3 + 6 * x\n",
         "\n",
-        "    x = 0  # Initial guess\n",
+        "    x = 0\n",
         "    learning_rate = 0.01\n",
         "    max_iterations = 10000\n",
         "    tolerance = 1e-6\n",
@@ -51,7 +51,7 @@
         "\n",
         "    return x, f(x)\n",
         "\n",
-        "# 2. Finding x and y at which g(x, y) = 3x^2 + 5e^(-y) + 10 has a minimum value using Gradient Descent.\n",
+        "\n",
         "def gradient_descent_g():\n",
         "    def g(x, y):\n",
         "        return 3 * x ** 2 + 5 * (2.718281828459045 ** -y) + 10\n",
@@ -62,7 +62,7 @@
         "    def g_derivative_y(y):\n",
         "        return -5 * (2.718281828459045 ** -y)\n",
         "\n",
-        "    x, y = 0, 0  # Initial guesses\n",
+        "    x, y = 0, 0\n",
         "    learning_rate = 0.01\n",
         "    max_iterations = 10000\n",
         "    tolerance = 1e-6\n",
@@ -81,7 +81,7 @@
         "\n",
         "    return x, y, g(x, y)\n",
         "\n",
-        "# 3. Finding x at which z(x) = 1 / (1 + e^(-x)) has a minimum value using Gradient Descent.\n",
+        "\n",
         "def gradient_descent_z():\n",
         "    def z(x):\n",
         "        return 1 / (1 + 2.718281828459045 ** -x)\n",
@@ -90,7 +90,7 @@
         "        sigmoid = z(x)\n",
         "        return sigmoid * (1 - sigmoid)\n",
         "\n",
-        "    x = 0  # Initial guess\n",
+        "    x = 0\n",
         "    learning_rate = 0.01\n",
         "    max_iterations = 10000\n",
         "    tolerance = 1e-6\n",
@@ -104,7 +104,7 @@
         "\n",
         "    return x, z(x)\n",
         "\n",
-        "# 4. Finding optimal values of M and C for the model's square error (SE) minimization.\n",
+        "\n",
         "def gradient_descent_model():\n",
         "    def square_error(M, C, data):\n",
         "        return sum((y - (M * x + C)) ** 2 for x, y in data) / len(data)\n",
@@ -115,8 +115,8 @@
         "        dC = -2 / n * sum((y - (M * x + C)) for x, y in data)\n",
         "        return dM, dC\n",
         "\n",
-        "    data = [(0.5, 1.5), (1, 2), (1.5, 2.5), (2, 3)]  # Example data (x, ExpectedOutput)\n",
-        "    M, C = 0, 0  # Initial guesses\n",
+        "    data = [(0.5, 1.5), (1, 2), (1.5, 2.5), (2, 3)]\n",
+        "    M, C = 0, 0\n",
         "    learning_rate = 0.01\n",
         "    max_iterations = 10000\n",
         "    tolerance = 1e-6\n",
@@ -144,9 +144,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "be5cdb7e-404e-4d1b-aa12-44cc4e616ab9"
+        "outputId": "686b1ff5-309b-49eb-8648-d47a0a0a79ff"
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
