--- a/2303A52280_Week_4_Assignment_4.ipynb
+++ b/2303A52280_Week_4_Assignment_4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOdiMgkzv4wxccBYyXJI9+N",
+      "authorship_tag": "ABX9TyPXX5hTC2dBfHYKBu29woQl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,33 +28,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 9,
       "metadata": {
         "id": "46Ka6vxh9uT7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d7472b0f-3d0b-4b0e-a734-9972f1c19588"
+        "outputId": "9c2bcc82-d9e7-44ce-9da6-cad9e8502422"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Epoch 0, Loss: 0.19473\n",
-            "Epoch 100, Loss: 0.00433\n",
-            "Epoch 200, Loss: 0.00344\n",
-            "Epoch 300, Loss: 0.00287\n",
-            "Epoch 400, Loss: 0.00239\n",
-            "Epoch 500, Loss: 0.00200\n",
-            "Epoch 600, Loss: 0.00167\n",
-            "Epoch 700, Loss: 0.00139\n",
-            "Epoch 800, Loss: 0.00116\n",
-            "Epoch 900, Loss: 0.00097\n",
-            "Training MSE: 0.00082\n",
-            "Testing MSE: 0.00165\n",
-            "Enter x1, x2, x3: 0.7,0.8,0.9\n",
-            "Predicted Output: 0.54799\n"
+            "Epoch 0, Loss: 1.63001\n",
+            "Epoch 100, Loss: 0.00280\n",
+            "Epoch 200, Loss: 0.00081\n",
+            "Epoch 300, Loss: 0.00067\n",
+            "Epoch 400, Loss: 0.00056\n",
+            "Epoch 500, Loss: 0.00047\n",
+            "Epoch 600, Loss: 0.00039\n",
+            "Epoch 700, Loss: 0.00032\n",
+            "Epoch 800, Loss: 0.00027\n",
+            "Epoch 900, Loss: 0.00023\n",
+            "Training MSE: 0.00019\n",
+            "Testing MSE: 0.00057\n",
+            "Enter x1, x2, x3: 0.6,0.7,0.8\n",
+            "Predicted Output: 0.42083\n"
           ]
         }
       ],
@@ -62,24 +62,24 @@
         "import numpy as np\n",
         "\n",
         "def train_ann(X_train, y_train, learning_rate=0.01, epochs=1000):\n",
-        "    # Initialize weights and bias\n",
+        "\n",
         "    weights = np.random.rand(X_train.shape[1])\n",
         "    bias = np.random.rand()\n",
         "\n",
-        "    # Training loop\n",
+        "\n",
         "    for epoch in range(epochs):\n",
-        "        y_pred = np.dot(X_train, weights) + bias  # Linear activation\n",
+        "        y_pred = np.dot(X_train, weights) + bias\n",
         "        error = y_pred - y_train\n",
         "\n",
-        "        # Compute gradients\n",
+        "\n",
         "        dW = (2 / X_train.shape[0]) * np.dot(X_train.T, error)\n",
         "        dB = (2 / X_train.shape[0]) * np.sum(error)\n",
         "\n",
-        "        # Update weights and bias\n",
+        "\n",
         "        weights -= learning_rate * dW\n",
         "        bias -= learning_rate * dB\n",
         "\n",
-        "        # Print loss occasionally\n",
+        "\n",
         "        if epoch % 100 == 0:\n",
         "            loss = np.mean(error ** 2)\n",
         "            print(f\"Epoch {epoch}, Loss: {loss:.5f}\")\n",
@@ -93,7 +93,7 @@
         "def predict(X, weights, bias):\n",
         "    return np.dot(X, weights) + bias\n",
         "\n",
-        "# Training Data\n",
+        "\n",
         "X_train = np.array([\n",
         "    [0.1, 0.2, 0.3],\n",
         "    [0.2, 0.3, 0.4],\n",
@@ -107,24 +107,23 @@
         "])\n",
         "y_train = np.array([0.14, 0.20, 0.26, 0.38, 0.22, 0.28, 0.34, 0.40, 0.46])\n",
         "\n",
-        "# Train the model\n",
         "weights, bias = train_ann(X_train, y_train)\n",
         "\n",
-        "# Test Data\n",
+        "\n",
         "X_test = np.array([\n",
         "    [0.6, 0.7, 0.8],\n",
         "    [0.7, 0.8, 0.9]\n",
         "])\n",
         "y_test = np.array([0.44, 0.50])\n",
         "\n",
-        "# Calculate Mean Square Error\n",
+        "\n",
         "train_mse = mean_square_error(X_train, y_train, weights, bias)\n",
         "test_mse = mean_square_error(X_test, y_test, weights, bias)\n",
         "\n",
         "print(f\"Training MSE: {train_mse:.5f}\")\n",
         "print(f\"Testing MSE: {test_mse:.5f}\")\n",
         "\n",
-        "# User Input Prediction\n",
+        "\n",
         "x_input = np.array([float(x) for x in input(\"Enter x1, x2, x3: \").replace(',', ' ').split()]).reshape(1, -1)\n",
         "predicted_output = predict(x_input, weights, bias)\n",
         "print(f\"Predicted Output: {predicted_output[0]:.5f}\")\n",
@@ -141,25 +140,25 @@
         "    return 1 / (1 + np.exp(-x))\n",
         "\n",
         "def train_ann(X_train, y_train, learning_rate=0.01, epochs=1000):\n",
-        "    # Initialize weights and bias\n",
+        "\n",
         "    weights = np.random.rand(X_train.shape[1])\n",
         "    bias = np.random.rand()\n",
         "\n",
-        "    # Training loop\n",
+        "\n",
         "    for epoch in range(epochs):\n",
         "        linear_output = np.dot(X_train, weights) + bias\n",
-        "        y_pred = sigmoid(linear_output)  # Sigmoid activation\n",
+        "        y_pred = sigmoid(linear_output)\n",
         "        error = y_pred - y_train\n",
         "\n",
-        "        # Compute gradients\n",
+        "\n",
         "        dW = (2 / X_train.shape[0]) * np.dot(X_train.T, error * y_pred * (1 - y_pred))\n",
         "        dB = (2 / X_train.shape[0]) * np.sum(error * y_pred * (1 - y_pred))\n",
         "\n",
-        "        # Update weights and bias\n",
+        "\n",
         "        weights -= learning_rate * dW\n",
         "        bias -= learning_rate * dB\n",
         "\n",
-        "        # Print loss occasionally\n",
+        "\n",
         "        if epoch % 100 == 0:\n",
         "            loss = np.mean(error ** 2)\n",
         "            print(f\"Epoch {epoch}, Loss: {loss:.5f}\")\n",
@@ -173,7 +172,7 @@
         "def predict(X, weights, bias):\n",
         "    return sigmoid(np.dot(X, weights) + bias)\n",
         "\n",
-        "# Training Data\n",
+        "\n",
         "X_train = np.array([\n",
         "    [0.1, 0.2, 0.3],\n",
         "    [0.2, 0.3, 0.4],\n",
@@ -187,24 +186,24 @@
         "])\n",
         "y_train = np.array([0.5349, 0.5498, 0.5646, 0.5939, 0.5548, 0.5695, 0.5842, 0.5987, 0.5548])\n",
         "\n",
-        "# Train the model\n",
+        "\n",
         "weights, bias = train_ann(X_train, y_train)\n",
         "\n",
-        "# Test Data\n",
+        "\n",
         "X_test = np.array([\n",
         "    [0.6, 0.7, 0.8],\n",
         "    [0.7, 0.8, 0.9]\n",
         "])\n",
         "y_test = np.array([0.6083, 0.6225])\n",
         "\n",
-        "# Calculate Mean Square Error\n",
+        "\n",
         "train_mse = mean_square_error(X_train, y_train, weights, bias)\n",
         "test_mse = mean_square_error(X_test, y_test, weights, bias)\n",
         "\n",
         "print(f\"Training MSE: {train_mse:.5f}\")\n",
         "print(f\"Testing MSE: {test_mse:.5f}\")\n",
         "\n",
-        "# User Input Prediction\n",
+        ".\n",
         "x_input = np.array([float(x) for x in input(\"Enter x1, x2, x3: \").replace(',', ' ').split()]).reshape(1, -1)\n",
         "predicted_output = predict(x_input, weights, bias)\n",
         "print(f\"Predicted Output: {predicted_output[0]:.5f}\")\n"
@@ -214,28 +213,28 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2ajmsOgUCf0A",
-        "outputId": "9ee30cd5-fa2b-49b2-c186-1e268d06b36d"
+        "outputId": "cb6b7703-7732-4431-da7b-214fb0ce558c"
       },
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Epoch 0, Loss: 0.03818\n",
-            "Epoch 100, Loss: 0.03095\n",
-            "Epoch 200, Loss: 0.02456\n",
-            "Epoch 300, Loss: 0.01912\n",
-            "Epoch 400, Loss: 0.01465\n",
-            "Epoch 500, Loss: 0.01108\n",
-            "Epoch 600, Loss: 0.00831\n",
-            "Epoch 700, Loss: 0.00621\n",
-            "Epoch 800, Loss: 0.00465\n",
-            "Epoch 900, Loss: 0.00351\n",
-            "Training MSE: 0.00269\n",
-            "Testing MSE: 0.00006\n",
-            "Enter x1, x2, x3: 0.1,0.2,0.3\n",
-            "Predicted Output: 0.61580\n"
+            "Epoch 0, Loss: 0.06774\n",
+            "Epoch 100, Loss: 0.05999\n",
+            "Epoch 200, Loss: 0.05223\n",
+            "Epoch 300, Loss: 0.04465\n",
+            "Epoch 400, Loss: 0.03746\n",
+            "Epoch 500, Loss: 0.03083\n",
+            "Epoch 600, Loss: 0.02492\n",
+            "Epoch 700, Loss: 0.01981\n",
+            "Epoch 800, Loss: 0.01554\n",
+            "Epoch 900, Loss: 0.01205\n",
+            "Training MSE: 0.00928\n",
+            "Testing MSE: 0.02795\n",
+            "Enter x1, x2, x3: 0.6,0.7,0.8\n",
+            "Predicted Output: 0.76640\n"
           ]
         }
       ]
