--- a/2303A52280_WEEK_9_ASSIGNMENT_9.ipynb
+++ b/2303A52280_WEEK_9_ASSIGNMENT_9.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN+3YV6VRts7b7EpE9p3fG5",
+      "authorship_tag": "ABX9TyPjW1X+gB0SjIjf6Jh30UtH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -173,55 +173,54 @@
         "from tensorflow.keras.utils import to_categorical\n",
         "import numpy as np\n",
         "\n",
-        "# Enable eager execution\n",
+        "\n",
         "tf.config.run_functions_eagerly(True)\n",
         "\n",
-        "# Load the MNIST dataset\n",
+        "\n",
         "(x_train, y_train), (x_test, y_test) = mnist.load_data()\n",
         "\n",
-        "# Print data shapes for debugging\n",
+        "\n",
         "print(f\"x_train shape: {x_train.shape}\")\n",
         "print(f\"y_train shape: {y_train.shape}\")\n",
         "print(f\"x_test shape: {x_test.shape}\")\n",
         "print(f\"y_test shape: {y_test.shape}\")\n",
         "\n",
-        "# Normalize the data\n",
         "x_train, x_test = x_train / 255.0, x_test / 255.0\n",
         "\n",
-        "# One-hot encode the labels\n",
+        "\n",
         "y_train = to_categorical(y_train, 10)\n",
         "y_test = to_categorical(y_test, 10)\n",
         "\n",
-        "# Define the ANN model\n",
+        "\n",
         "def build_model(hidden_neurons=[32, 32, 32], activation='relu', epochs=10, batch_size=128):\n",
         "    model = Sequential()\n",
         "    model.add(Flatten(input_shape=(28, 28)))\n",
         "\n",
-        "    # Dynamically add hidden layers\n",
+        "\n",
         "    for neurons in hidden_neurons:\n",
         "        model.add(Dense(neurons, activation=activation))\n",
         "\n",
-        "    model.add(Dense(10, activation='softmax'))  # Output layer\n",
+        "    model.add(Dense(10, activation='softmax'))\n",
         "\n",
-        "    # Create a new optimizer instance for each model training\n",
+        "\n",
         "    optimizer = Adadelta()\n",
         "    model.compile(optimizer=optimizer, loss='categorical_crossentropy', metrics=['accuracy'])\n",
         "\n",
-        "    # Train the model\n",
+        "\n",
         "    model.fit(x_train, y_train, epochs=epochs, batch_size=batch_size, validation_data=(x_test, y_test), verbose=2)\n",
         "\n",
-        "    # Evaluate the model\n",
+        "\n",
         "    train_loss, train_acc = model.evaluate(x_train, y_train, verbose=0)\n",
         "    test_loss, test_acc = model.evaluate(x_test, y_test, verbose=0)\n",
         "\n",
         "    return float(train_acc), float(test_acc)\n",
         "\n",
-        "# Initial model evaluation\n",
+        "\n",
         "train_accuracy, test_accuracy = build_model()\n",
         "print(f\"Training Accuracy: {train_accuracy:.4f}\")\n",
         "print(f\"Testing Accuracy: {test_accuracy:.4f}\")\n",
         "\n",
-        "# Experiment with different architectures\n",
+        "\n",
         "best_accuracy = 0\n",
         "best_config = None\n",
         "\n",
