--- a/2303A52280_WEEK_10_ASSIGNMENT_10.ipynb
+++ b/2303A52280_WEEK_10_ASSIGNMENT_10.ipynb
@@ -12,10 +12,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
-          "background_save": true,
           "base_uri": "https://localhost:8080/"
         },
         "id": "VQUEGRUcbjes",
@@ -49,7 +48,67 @@
           "name": "stdout",
           "text": [
             "Epoch 1/30\n",
-            "\u001b[1m1874/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m━\u001b[0m \u001b[1m0s\u001b[0m 33ms/step - accuracy: 0.9068 - loss: 0.2963"
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m68s\u001b[0m 34ms/step - accuracy: 0.9068 - loss: 0.2962 - val_accuracy: 0.9871 - val_loss: 0.0416\n",
+            "Epoch 2/30\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m62s\u001b[0m 33ms/step - accuracy: 0.9867 - loss: 0.0453 - val_accuracy: 0.9898 - val_loss: 0.0328\n",
+            "Epoch 3/30\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m78s\u001b[0m 31ms/step - accuracy: 0.9918 - loss: 0.0252 - val_accuracy: 0.9902 - val_loss: 0.0284\n",
+            "Epoch 4/30\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m83s\u001b[0m 31ms/step - accuracy: 0.9935 - loss: 0.0196 - val_accuracy: 0.9889 - val_loss: 0.0307\n",
+            "Epoch 5/30\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m82s\u001b[0m 31ms/step - accuracy: 0.9958 - loss: 0.0137 - val_accuracy: 0.9910 - val_loss: 0.0288\n",
+            "Epoch 6/30\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m60s\u001b[0m 32ms/step - accuracy: 0.9965 - loss: 0.0113 - val_accuracy: 0.9904 - val_loss: 0.0314\n",
+            "Epoch 7/30\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m60s\u001b[0m 32ms/step - accuracy: 0.9968 - loss: 0.0095 - val_accuracy: 0.9891 - val_loss: 0.0420\n",
+            "Epoch 8/30\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m61s\u001b[0m 32ms/step - accuracy: 0.9973 - loss: 0.0079 - val_accuracy: 0.9917 - val_loss: 0.0308\n",
+            "Epoch 9/30\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m61s\u001b[0m 33ms/step - accuracy: 0.9981 - loss: 0.0052 - val_accuracy: 0.9916 - val_loss: 0.0377\n",
+            "Epoch 10/30\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m84s\u001b[0m 34ms/step - accuracy: 0.9978 - loss: 0.0060 - val_accuracy: 0.9915 - val_loss: 0.0355\n",
+            "Epoch 11/30\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m59s\u001b[0m 32ms/step - accuracy: 0.9985 - loss: 0.0052 - val_accuracy: 0.9911 - val_loss: 0.0390\n",
+            "Epoch 12/30\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m84s\u001b[0m 33ms/step - accuracy: 0.9981 - loss: 0.0054 - val_accuracy: 0.9924 - val_loss: 0.0344\n",
+            "Epoch 13/30\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m59s\u001b[0m 31ms/step - accuracy: 0.9989 - loss: 0.0032 - val_accuracy: 0.9922 - val_loss: 0.0352\n",
+            "Epoch 14/30\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m82s\u001b[0m 32ms/step - accuracy: 0.9988 - loss: 0.0035 - val_accuracy: 0.9905 - val_loss: 0.0477\n",
+            "Epoch 15/30\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m63s\u001b[0m 33ms/step - accuracy: 0.9986 - loss: 0.0052 - val_accuracy: 0.9924 - val_loss: 0.0370\n",
+            "Epoch 16/30\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m82s\u001b[0m 33ms/step - accuracy: 0.9992 - loss: 0.0022 - val_accuracy: 0.9926 - val_loss: 0.0382\n",
+            "Epoch 17/30\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m78s\u001b[0m 31ms/step - accuracy: 0.9989 - loss: 0.0028 - val_accuracy: 0.9900 - val_loss: 0.0601\n",
+            "Epoch 18/30\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m82s\u001b[0m 31ms/step - accuracy: 0.9988 - loss: 0.0042 - val_accuracy: 0.9917 - val_loss: 0.0490\n",
+            "Epoch 19/30\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m82s\u001b[0m 32ms/step - accuracy: 0.9991 - loss: 0.0028 - val_accuracy: 0.9910 - val_loss: 0.0539\n",
+            "Epoch 20/30\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m60s\u001b[0m 32ms/step - accuracy: 0.9991 - loss: 0.0031 - val_accuracy: 0.9922 - val_loss: 0.0541\n",
+            "Epoch 21/30\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m85s\u001b[0m 34ms/step - accuracy: 0.9991 - loss: 0.0032 - val_accuracy: 0.9914 - val_loss: 0.0531\n",
+            "Epoch 22/30\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m83s\u001b[0m 35ms/step - accuracy: 0.9986 - loss: 0.0044 - val_accuracy: 0.9909 - val_loss: 0.0553\n",
+            "Epoch 23/30\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m81s\u001b[0m 34ms/step - accuracy: 0.9992 - loss: 0.0025 - val_accuracy: 0.9909 - val_loss: 0.0566\n",
+            "Epoch 24/30\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m62s\u001b[0m 33ms/step - accuracy: 0.9992 - loss: 0.0027 - val_accuracy: 0.9918 - val_loss: 0.0478\n",
+            "Epoch 25/30\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m62s\u001b[0m 33ms/step - accuracy: 0.9993 - loss: 0.0022 - val_accuracy: 0.9890 - val_loss: 0.0640\n",
+            "Epoch 26/30\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m64s\u001b[0m 34ms/step - accuracy: 0.9992 - loss: 0.0022 - val_accuracy: 0.9913 - val_loss: 0.0692\n",
+            "Epoch 27/30\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m79s\u001b[0m 33ms/step - accuracy: 0.9988 - loss: 0.0036 - val_accuracy: 0.9918 - val_loss: 0.0605\n",
+            "Epoch 28/30\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m82s\u001b[0m 33ms/step - accuracy: 0.9993 - loss: 0.0021 - val_accuracy: 0.9904 - val_loss: 0.0626\n",
+            "Epoch 29/30\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m85s\u001b[0m 35ms/step - accuracy: 0.9993 - loss: 0.0021 - val_accuracy: 0.9912 - val_loss: 0.0659\n",
+            "Epoch 30/30\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m79s\u001b[0m 33ms/step - accuracy: 0.9994 - loss: 0.0022 - val_accuracy: 0.9902 - val_loss: 0.0673\n",
+            "Training Accuracy: 0.9994\n",
+            "Testing Accuracy: 0.9902\n"
           ]
         }
       ],
